--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,7 +13,13 @@
 .icon {
     color: red;
     font-size: 7vh;
-    padding-left: 1vw;
+    padding-left: 1.5vw;
     padding-top: 1.5vh;
         
+}
+
+.navigation-box {
+    background-color: maroon;
+    height: 100px;
+    width: 500px;
 }
