--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -21,21 +21,62 @@
 .navigation-box {
     background-color: maroon;
     display: grid;
-    height: 40vh;
+    height: 100vh;
     width: 65vw;
     transform: translateX(-65vw);
     z-index: 1000;
 
     transition: all 1.5s ease;
 
+    display: grid;
+    grid-template-rows: repeat(5, 15vh);
+
     &__link1 {
-        background-color: cornflowerblue;
-        border: 1px solid orange;
+        grid-row: 1/2;
+        width: 80%;
+        justify-self: center;
+        text-align: center;
+        color: white;
+        border-bottom: 1px solid #a6a6a6;
+
+        font-size: 10vh;
+
+        &:hover {
+            text-decoration: none;
+            color: black;
+        }
     }
 
     &__link2 {
-        background-color: white;
-        border: 1px solid orange;
+        grid-row: 2/3;
+        width: 80%;
+        justify-self: center;
+        text-align: center;
+        color: white;
+        border-bottom: 1px solid #a6a6a6;
+
+        font-size: 10vh;
+
+        &:hover {
+            text-decoration: none;
+            color: black;
+        }
+    }
+
+    &__link3 {
+        grid-row: 3/4;
+        width: 80%;
+        justify-self: center;
+        text-align: center;
+        color: white;
+        border-bottom: 1px solid #a6a6a6;
+
+        font-size: 10vh;
+
+        &:hover {
+            text-decoration: none;
+            color: black;
+        }
     }
 }
 
